fixed vision-mission to only animate when visibile and its alignemnt fix

--- a/New_C2D/public/Landing.css
+++ b/New_C2D/public/Landing.css
@@ -483,12 +483,51 @@ nav {
   align-items: center;
   justify-content: space-between;
   position: relative;
-  width: 471px;
-  margin-right: auto;
-  margin-left: 31%;
+  width: 470px;
+  padding: 50px 0;
   column-gap: 41.5%;
+  margin-right: 2.7%;
 
 }
+
+.step-2 {
+  position: relative;
+  transition: all 0.5s ease;
+}
+
+.circle-2 {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  transition: background-color 0.1s, box-shadow 0.1s;
+}
+
+.circle-text2 {
+  position: absolute;
+  top: 40px;
+  font-size: 14px;
+}
+
+.base-line-2,
+.loading-line-2 {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 2px;
+  background-color: #ddd;
+}
+
+.loading-line-2 {
+  background-color: #4b8bc3;
+  transition: width 1s ease-in-out;
+}
+
+/* Active Step Style */
+.step-active .circle-2 {
+  background-color: #ff6347; /* Highlight active circle color */
+  box-shadow: 0 3px 5px rgba(255, 99, 71, 0.4);
+}
+
 
 /* Base line */
 .base-line {
